example_process/example_subject/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: example-subject
  labels:
    pass.subject: example-subject
spec:
  restartPolicy: Always

  containers:
    - name: subject-behavior
      image: example_subject:latest
      imagePullPolicy: Never
      command: ["python", "/app/behavior.py"]

    - name: input-pool
      image: input_pool:latest
      imagePullPolicy: Never
      command: ["input-pool"]

      ports:
        - containerPort: 8081
        - containerPort: 8080
