example_process/example_subject/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-subject
spec:
  selector:
    pass.subject: example-subject
  ports:
    - name: input-pool
      port: 8080
      targetPort: 8080
