example_process/example_subject/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-subject-ingress
spec:
  rules:
    - http:
        paths:
          - path: /example-subject
            pathType: Prefix
            backend:
              service:
                name: example-subject
                port:
                  number: 8080
